2010-05-20 04:14-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Added method 
	displayPopUpMenu:... to handle the display of the popup menus for
	themes.
	* Source/GSThemeMenu.m: Added default implementation.
	* Source/NSPopUpButtonCell.m: Call the displayPopUpMenu:... method
	in the method attachPopUpWithFrame:inView:.

2010-05-19 Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/AppKit/NSColorPicking.h: Removed Protocol.h import to 
	eliminate potential return type conflicts, between -(unsigned int)hash 
	from Object and -(NSUInteger)hash from NSObject, when the receiver is 
	of type (id).

2010-05-19 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSVbox.m,
	* Source/GSHbox.m:
	Changed header include to import

2010-05-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (-setView:): Only set the min/max size of
	the toolbar item when it was zero.

2010-05-17 04:36-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSApplication.m: Attempt to open files from the command
	line, if possible in -finishLaunching.  This matches the behavior
	seen on OpenStep and on Mac OS X/Cocoa.

2010-05-16 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/Functions.m:
	* Source/NSApplication.m (-finishLaunching):
	Moved the main Nib file loading from -finishLaunching to 
	NSApplicationMain() to match Cocoa behavior/documentation.
	This makes easier to implement a custom AppKit main that works with both 
	Cocoa and GNUstep.

2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSNibLoading.m (-nibInstantiate): Fix bug where a window
	was ignoring its autosaved frame when loaded from a .nib file.

2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSFontManager.m (-fontMenu): Remove key equivalents that
	conflict with standard key equivalents.

2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAlert.m:
	* Source/NSDrawer.m:
	* Source/NSHelpPanel.m: